@@ -1,3 +1,7 @@
+Release ...
+* troff, nroff: A type definition problem that caused an endless loop
+  on 64-bit systems has been fixed.
+
 Release 070908
 * troff: The ".hw" request now works correctly for words that contain
   ligatures (bug reported by Dirk-Wilhelm Peters).
